# vt100-pi-terminal

./: .gitignore  .gitmodules  README.md  VT100-PI Notes
.github/workflows/: vt100-pi-zero.yml  vt100-pi.yml
VT100-PI/: CMakeLists.txt  README.md  VT100-PI.c  lwipopts.h  tusb_config.h
VT100-PI-ZERO/: CMakeLists.txt  README.md
VT100-PI-ZERO/assets/: FONTS.md
VT100-PI-ZERO/enclosure/: vt100_case.scad
VT100-PI-ZERO/src/: config.h  main.c  service.c  service.h  settings.c  settings.h  setup.c  setup.h
VT100-PI-ZERO/src/io/: host_link.c  host_link.h  kbd_evdev.c  kbd_evdev.h  serial_linux.c  serial_linux.h
VT100-PI-ZERO/src/net/: netlink.c  netlink.h  telnet.c  telnet.h
VT100-PI-ZERO/src/terminal/: screen.h  vt100.c  vt100.h  vtparse.h
VT100-PI-ZERO/src/video/: font_8x16.h  font_vt220.h  fonts.c  fonts.h  glyphs.c  glyphs.h  textmode.c  textmode.h  themes.c  themes.h
VT100-PI-ZERO/systemd/: vt100-pi.service
VT100-PI/src/: VT100-PI.code-workspace  config.h  fault.c  fault.h  settings.c  settings.h  setup.c  setup.h
VT100-PI/src/io/: kbd_host.c  kbd_host.h  serial.c  serial.h  sys_clock.c  sys_clock.h
VT100-PI/src/net/: net.c  net.h
VT100-PI/src/terminal/: screen.c  vt100.c  vt100.h  vtparse.c
VT100-PI/src/video/: font_12x22.h  hstx_dvi.c  hstx_dvi.h  textmode.c  textmode.h
